<!--

    Licensed to Apereo under one or more contributor license
    agreements. See the NOTICE file distributed with this work
    for additional information regarding copyright ownership.
    Apereo licenses this file to you under the Apache License,
    Version 2.0 (the "License"); you may not use this file
    except in compliance with the License.  You may obtain a
    copy of the License at the following location:

      http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing,
    software distributed under the License is distributed on an
    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
    KIND, either express or implied.  See the License for the
    specific language governing permissions and limitations
    under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <parent>
        <groupId>org.jasig.parent</groupId>
        <artifactId>jasig-parent</artifactId>
        <version>41</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.jasig.cas.client</groupId>
    <version>3.6.5-SNAPSHOT</version>
    <artifactId>cas-client</artifactId>
    <packaging>pom</packaging>

    <name>Apereo CAS Client for Java</name>
    <description>
        Apereo CAS Client for Java is the integration point for applications that want to speak with a CAS
        server, either via the CAS 1.0 or CAS 2.0 protocol.
    </description>
    <url>https://www.apereo.org/cas</url>

    <scm>
        <connection>scm:git:git@github.com:apereo/java-cas-client.git</connection>
        <developerConnection>scm:git:git@github.com:apereo/java-cas-client.git</developerConnection>
        <url>https://github.com/apereo/java-cas-client</url>
        <tag>cas-client-3.6.4</tag>
    </scm>

    <inceptionYear>2006</inceptionYear>

    <developers>
        <developer>
            <id>battags</id>
            <name>Scott Battaglia</name>
            <email>scott.battaglia@gmail.com</email>
            <url>http://www.scottbattaglia.com</url>
            <roles>
                <role>Project Admin</role>
                <role>Developer</role>
            </roles>
            <timezone>-5</timezone>
        </developer>
        <developer>
            <id>serac</id>
            <name>Marvin S. Addison</name>
            <email>marvin.addison@gmail.com</email>
            <roles>
                <role>Developer</role>
            </roles>
            <timezone>-5</timezone>
        </developer>
    </developers>

    <organization>
        <name>Apereo</name>
        <url>https://www.apereo.org</url>
    </organization>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.4.0</version>
                <configuration>
                    <descriptors>
                        <descriptor>${basedir}/assembly.xml</descriptor>
                    </descriptors>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
                <configuration>
                    <includes>
                        <include>**/*Tests*</include>
                    </includes>
                    <useUnlimitedThreads>false</useUnlimitedThreads>
                    <threadCount>1</threadCount>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>enforce-banned-dependencies</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <bannedDependencies>
                                    <excludes>
                                        <exclude>commons-logging</exclude>
                                    </excludes>
                                </bannedDependencies>
                            </rules>
                            <fail>true</fail>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>com.mycila.maven-license-plugin</groupId>
                <artifactId>maven-license-plugin</artifactId>
                <configuration>
                    <header>src/licensing/header.txt</header>
                    <skipExistingHeaders>true</skipExistingHeaders>
                    <headerDefinitions>
                        <headerDefinition>src/licensing/header-definitions.xml</headerDefinition>
                    </headerDefinitions>
                    <aggregate>true</aggregate>
                    <excludes>
                        <exclude>**/.idea/**</exclude>
                        <exclude>LICENSE</exclude>
                        <exclude>**/INSTALL*</exclude>
                        <exclude>**/NOTICE*</exclude>
                        <exclude>**/README*</exclude>
                        <exclude>**/readme*</exclude>
                        <exclude>**/*.log</exclude>
                        <exclude>**/*.license</exclude>
                        <exclude>**/*.txt</exclude>
                        <exclude>**/*.crt</exclude>
                        <exclude>**/*.crl</exclude>
                        <exclude>**/*.key</exclude>
                        <exclude>**/.gitignore</exclude>
                        <exclude>**/overlays/**</exclude>
                        <exclude>src/licensing/**</exclude>
                    </excludes>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.4.0</version>
                <configuration>
                    <doclint>none</doclint>
                </configuration>
            </plugin>

        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-core</artifactId>
                <version>${spring.version}</version>
                <exclusions>
                    <exclusion>
                        <artifactId>commons-logging</artifactId>
                        <groupId>commons-logging</groupId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-context</artifactId>
                <version>${spring.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-web</artifactId>
                <version>${spring.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-test</artifactId>
                <version>${spring.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>log4j</groupId>
                <artifactId>log4j</artifactId>
                <scope>test</scope>
                <version>1.2.17</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>1.15</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcpkix-jdk15on</artifactId>
            <version>1.70</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>4.0.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
            <version>${slf4j.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <modules>
        <module>cas-client-core</module>
        <!-- <module>cas-client-integration-atlassian</module> -->
        <module>cas-client-integration-jboss</module>
        <module>cas-client-support-distributed-ehcache</module>
        <module>cas-client-support-distributed-memcached</module>
        <module>cas-client-support-saml</module>
        <module>cas-client-support-springboot</module>
        <module>cas-client-integration-tomcat-common</module>
        <module>cas-client-integration-tomcat-v6</module>
        <module>cas-client-integration-tomcat-v7</module>
        <module>cas-client-integration-tomcat-v8</module>
        <module>cas-client-integration-tomcat-v85</module>
        <module>cas-client-integration-tomcat-v90</module>
        <module>cas-client-integration-jetty</module>
    </modules>

    <properties>
        <spring.version>5.3.21</spring.version>
        <ehcache.version>2.6.11</ehcache.version>
        <clover.version>3.0.2</clover.version>
        <slf4j.version>1.7.36</slf4j.version>
        <jackson.version>2.13.3</jackson.version>
    </properties>
</project>
